login and register

--- a/MyOrganizer/App/Views/login.html
+++ b/MyOrganizer/App/Views/login.html
@@ -1,8 +1,4 @@
-﻿<div uib-alert ng-repeat="alert in alerts" class="alert-danger" data-ng-animate="alert-danger">
-    {{alert.msg}}
-</div>
-
-<div class="auth-container">
+﻿<div class="auth-container">
     <div class="container-fluid col-xs-12 authenticate" ng-hide="authenticate">
         <div class="row">
             <h2 class="black">Login</h2>
@@ -19,9 +15,16 @@
         </div>
         <div class="row">
             <div class="col-xs-12 buttons">
-                <button class="col-xs-12 btn btn-warning" ng-click="login()" ng-class="{'is-loading':inProgress}">Login</button>
+                <button class="col-xs-12 btn btn-warning" ng-click="loginUser()" ng-class="{'is-loading':inProgress}">Login</button>
             </div>
         </div>
+
+        <div class="container">
+            <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
+                {{alert.msg}}
+            </div>
+        </div>
+
         <div class="col-xs-12 center registerText"><a ng-click="authenticate = !authenticate">Dont have an account? Register here</a></div>
     </div>
 
@@ -31,22 +34,12 @@
         </div>
         <div class="row">
             <div class="col-xs-12 input-group">
-                <input type="text" class="form-control" placeholder="First Name" ng-model="auth.firstName" required autofocus>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 input-group">
-                <input type="text" class="form-control" placeholder="Last Name" ng-model="auth.lastName" required autofocus>
+                <input type="text" class="form-control" placeholder="Username" ng-model="auth.username" required autofocus>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 input-group">
                 <input type="email" class="form-control" placeholder="Email Address" ng-model="auth.email" required autofocus>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 input-group">
-                <input type="text" class="form-control" placeholder="Username" ng-model="auth.username" required autofocus>
             </div>
         </div>
         <div class="row">
@@ -59,9 +52,16 @@
                 <input type="password" class="form-control" placeholder="Confirm Password" ng-model="auth.confirm" required>
             </div>
         </div>
+
         <div class="row">
             <div class="col-xs-12 buttons">
                 <button class="col-xs-12 btn btn-warning" ng-click="registerUser()">Register</button>
+            </div>
+        </div>
+
+        <div class="container">
+            <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
+                {{alert.msg}}
             </div>
         </div>
         <div class="col-xs-12 center registerText"><a ng-click="authenticate = !authenticate">Already have an account? Login here</a></div>
