--- a/MyOrganizer/App/Views/addressBook.html
+++ b/MyOrganizer/App/Views/addressBook.html
@@ -1,7 +1,49 @@
-﻿<div>
-    <h1> inside addressBook page</h1>
-    <ul>
-        <li ng-repeat="item in addressBookItems">{{item}}</li>
-    </ul>
-
+﻿<div class="navbar navbar-inverse navbar-fixed-top AddressBookNavBar" ng-hide="MainNavBar">
+    <div class="container">
+        <div class="navbar-collapse collapse ">
+            <ul class="nav navbar-nav navbar-left" ng-if='isLoggedIn()'>
+                <li><a href=""> {{UserName}}'s Address Book</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li ><a ng-if='isLoggedIn()' ng-href="#!/addressBook/list" ng-show="NewAddressBook">Address List</a></li>
+                <li ><a ng-if='isLoggedIn()' ng-href="#!/addressBook/new">New Address</a></li>
+                <li ><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
+                <li ><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
+                <li ><a ng-if='isLoggedIn()' ng-click='Logout()' href=" ">Logout </a></li>
+            </ul>
+        </div>
+    </div>
 </div>
+
+<h3>Add New Address</h3>
+<div class="form-group NewAddressBook" ng-hide="NewAddressBook">
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="First Name" ng-model="newAddress.FirstName" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="Last Name" ng-model="newAddress.LastName" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="Tel" ng-model="newAddress.Tel" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="Email" ng-model="newAddress.Email" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="Street" ng-model="newAddress.Street" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="City" ng-model="newAddress.City" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="State" ng-model="newAddress.State" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="Zipcode" ng-model="newAddress.Zipcode" />
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="RelationShip" ng-model="newAddress.RelationShip" />
+    </div>
+    <button class="btn btn-default " ng-click="addNewAddress(newAddress)">Submit</button>
+</div>
+
