--- a/MyOrganizer/Views/Shared/_Layout.cshtml
+++ b/MyOrganizer/Views/Shared/_Layout.cshtml
@@ -8,22 +8,15 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body ng-app="MyOrganizer">
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top MainNavBar">
         <div class="container">
-            <div class="navbar-header">
-                @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar">hi 1</span>
-                    <span class="icon-bar">hi2</span>
-                    <h1>HIIIIII</h1>
-                    <span class="icon-bar">hi 3</span>
-                </button>*@
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>    
-                    <li> <a ng-if='isLoggedIn()' ng-click='Logout()'  href= " ">Logout </a></li>
+                <ul class="nav navbar-nav"> 
+                    <li> My Organizer</li>
+                    <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address Book</a></li>
+                    <li><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
+                    <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
+                    <li><a ng-if='isLoggedIn()' ng-click='Logout()'  href= " ">Logout </a></li>
                 </ul>
             </div>
         </div>
