--- a/MyOrganizer/Views/Shared/_Layout.cshtml
+++ b/MyOrganizer/Views/Shared/_Layout.cshtml
@@ -12,10 +12,10 @@
         <div class="container">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"> 
-                    <li> My Organizer</li>
-                    <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address Book</a></li>
+                    <li > My Organizer</li>
+                    @*<li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address Book</a></li>
                     <li><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
-                    <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
+                    <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>*@
                     <li><a ng-if='isLoggedIn()' ng-click='Logout()'  href= " ">Logout </a></li>
                 </ul>
             </div>
