--- a/MyOrganizer/App/Views/newAddress.html
+++ b/MyOrganizer/App/Views/newAddress.html
@@ -41,6 +41,9 @@
     <div class="form-group">
         <input type="text" class="form-control " placeholder="Zipcode" ng-model="newAddress.Zipcode" />
     </div>  
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="RelationShip" ng-model="newAddress.RelationShip" />
+    </div> 
     <button class="btn btn-default " ng-click="addNewAddress()">Submit</button>
 
     <div class="container">
