--- a/MyOrganizer/App/Views/addressBook.html
+++ b/MyOrganizer/App/Views/addressBook.html
@@ -21,35 +21,18 @@
     <div class="searchText ">
         <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
     </div>
-
     <div ng-repeat="address in addressBookList | filter: searchText">
         <a href="">
             <div class="panel panel-default panel-body">
-                <!--<div class="panel-body">-->
-                    <div class="col-xs-8" ng-click="getSingleAddress(address.Id)">
+                    <div class="col-xs-8" ng-click="getsingleAddress(address.Id)">
                         <div class="col-xs-4">{{address.FirstName}} &nbsp; {{address.LastName}}</div>
                         <div class="col-xs-2"> {{address.Tel}} </div>
                     </div>
-                <!--</div>-->
             </div>
-        </a>
-
-                    <!--<div class="col-xs-1 col-xs-offset-1">
-                    <a ng-href="#!/addressBooks/edit/{{item.id}}">
-                        <button class="btn btn-danger fa fa-pencil-square-o"></button>
-                    </a>
-                </div>
-
-                <div class="col-xs-1 col-xs-offset-1">
-                    <a ng-href="#!/addressBooks/list">
-                        <button class="btn btn-danger fa fa-trash-o" ng-click="deleteAddress(item.id)"></button>
-                    </a>
-                </div>-->
-
-               
-            </div>
+        </a>       
+    </div>
 </div>
-</div>
+<!--</div>-->
 
 
 
