--- a/MyOrganizer/App/Views/singleAddress.html
+++ b/MyOrganizer/App/Views/singleAddress.html
@@ -6,10 +6,10 @@
             <!--<div class="col-xs-1"> {{singleAddress.LastName}}</div>-->
             <div class="col-xs-3"> {{singleAddress.Tel}} </div>
             <div class="col-xs-4"> {{singleAddress.Email}}</div>
-            <div class="col-xs-6"> {{singleAddress.Street}}  &nbsp; {{singleAddress.City}} &nbsp; {{singleAddress.State}} {{singleAddress.Zipcode}}</div>
-            <!--<div class="col-xs-2"> {{singleAddress.City}}</div>
-            <div class="col-xs-2"> {{singleAddress.State}}</div>
-            <div class="col-xs-3"> {{singleAddress.Zipcode}}</div>-->
+            <div class="col-xs-6"> {{singleAddress.Street}}  &nbsp; 
+                                   {{singleAddress.City}} &nbsp;
+                                   {{singleAddress.State}} 
+                                   {{singleAddress.Zipcode}}</div>
             <div class="col-xs-1"> {{singleAddress.RelationShip}}</div>
 
             
