address book work except drop down menu and route issue

--- a/MyOrganizer/App/Views/editAddress.html
+++ b/MyOrganizer/App/Views/editAddress.html
@@ -50,7 +50,7 @@
         <select ng-model="singleAddress.RelationShip">
             <option value="0">Family</option>
             <option value="1">Friend</option>
-            <option value="2">Others</option>
+            <option value="2" selected>Others</option>
 
         </select>
 
