--- a/MyOrganizer/App/Views/editTask.html
+++ b/MyOrganizer/App/Views/editTask.html
@@ -2,10 +2,11 @@
     <div class="container">
         <div class="navbar-collapse collapse ">
             <ul class="nav navbar-nav navbar-left" ng-if='isLoggedIn()'>
-                <li><a href=""> {{UserName}}'s Tasks</a></li>
+                <li><a href=""> {{UserName}}'s Task</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a ng-if='isLoggedIn()' ng-href="#!/task">Tasks List </a></li>
+                <li><a ng-if='isLoggedIn()' ng-href="#!/task">Tasks List</a></li>
+                <li><a ng-if='isLoggedIn()' ng-href="#!/task/new">New Task</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address Book</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
                 <li><a ng-if='isLoggedIn()' ng-click='Logout()' href=" ">Logout </a></li>
@@ -14,26 +15,30 @@
     </div>
 </div>
 
-<h3>New Task</h3>
+<h3>Edit Address</h3>
 <div class="form-group">
+
     <div class="form-group">
-        <input type="text" class="form-control " placeholder="Task Name" ng-model="newTask.TaskName" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="TaskDate" ng-model="newTask.TaskDate" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="Description" ng-model="newTask.Description" />
-    </div>
-    <label>Repeate</label>
-    <div class="form-group">
-        <input type="checkbox" class="checkbox "   ng-click="repeateTask = !repeateTask"/>
+        <input type="text" class="form-control " placeholder="singleTask.TaskName" ng-model="singleTask.TaskName" />
     </div>
 
-    <div class ="repeateTask" ng-show="repeateTask">
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="singleTask.TaskDate" ng-model="singleTask.TaskDate" />
+    </div>
+
+    <div class="form-group">
+        <input type="text" class="form-control " placeholder="singleTask.Description" ng-model="singleTask.Description" />
+    </div>
+
+    <!--<label>Repeate</label>
+    <div class="form-group">
+        <input type="checkbox" class="checkbox " ng-click="repeateTask = !repeateTask" />
+    </div>
+
+    <div class="repeateTask" ng-hide="repeateTask">
         <label>Repeate every </label>
         <div class="form-group">
-            <select ng-model="newTask.Interval">
+            <select ng-model="singleTask.Interval">
                 <option value="0">None</option>
                 <option value="1">Daily</option>
                 <option value="2">Weekly</option>
@@ -43,7 +48,7 @@
         </div>
         <label>Repeating Period </label>
         <div class="form-group">
-            <select ng-model="newTask.Period">
+            <select ng-model="singleTask.Period">
                 <option value="0">None</option>
                 <option value="1">Week</option>
                 <option value="2">Month</option>
@@ -53,13 +58,14 @@
                 <option value="6">FiveYears</option>
             </select>
         </div>
-    </div>
+    </div>-->
 
-    <button class="btn btn-default " ng-click="addNewTask()">Submit</button>
+</div>
+    <button class="btn btn-default " ng-click="editSingleTask()">Change</button>
 
     <div class="container">
         <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
             {{alert.msg}}
         </div>
     </div>
-</div>
+<!--</div>-->
