--- a/MyOrganizer/App/Views/singleTask.html
+++ b/MyOrganizer/App/Views/singleTask.html
@@ -22,14 +22,6 @@
         <div class="col-xs-3"> {{singleTask.TaskName}} &nbsp; {{singleTask.TaskDate}}</div>
         <div class="col-xs-3"> {{singleTask.Description}} </div>
         <div class="col-xs-4"> {{singleTask.Done}}</div>
-        <div class="col-xs-6">
-            {{singleTask.Interval}}  &nbsp;
-            {{singleTask.Period}} &nbsp;
-        </div>
-        <div class="col-xs-1"> {{singleAddress.RelationShip}}</div>
-
-
-
         <!--</div>-->
     </div>
     <div class="col-xs-4 ">
@@ -43,4 +35,10 @@
         <button class="btn btn-danger fa fa-trash-o" ng-click="deleteSingleTask(singleTask.Id)"></button>
         <!--</a>-->
     </div>
+
+    <div class=" col-xs-2">
+        <label for="taskDone">Done</label>
+        <input type="checkbox" Id="taskDone " class="checkbox" ng-click="taskDone(singleTask.Id)">
+    </div>
+
 </div>
