--- a/MyOrganizer/App/Views/newTask.html
+++ b/MyOrganizer/App/Views/newTask.html
@@ -19,9 +19,26 @@
     <div class="form-group">
         <input type="text" class="form-control " placeholder="Task Name" ng-model="newTask.TaskName" />
     </div>
+    <!--<div class="form-group">
+        <input type="text" id ="date" name="date" class="form-control " placeholder="TaskDate" datepicker-popup="MM/dd/yyyy" datepicker-options="dateOptions" ng-model="newTask.TaskDate" />
+    </div>-->
+
+    <!--<div class="input-group col-xs-6 col-xs-offset-3">
+        <span class="input-group-addon" id="sizing-addon1" ng-click="displayCalender()">
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+        </span>
+        <input type="text" class="form-control"  placeholder="TaskDate" datepicker-popup="MM/dd/yyyy" ng-model="newTask.TaskDate">
+    </div>-->
+
     <div class="form-group">
-        <input type="text" class="form-control " placeholder="TaskDate" ng-model="newTask.TaskDate" />
+        <input type="date" class="form-control" datepicker-popup="MM/dd/yyyy" ng-model="newTask.TaskDate" is-open="isOpened2" min-date="minDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+        <span class="input-group-btn">
+            <!--<button type="button" class="btn btn-default" ng-click="isOpened2 = !isOpened2">
+                <i class="glyphicon glyphicon-calendar"></i>
+            </button>-->
+        </span>
     </div>
+
     <div class="form-group">
         <input type="text" class="form-control " placeholder="Description" ng-model="newTask.Description" />
     </div>
