--- a/MyOrganizer/App/Views/addressBook.html
+++ b/MyOrganizer/App/Views/addressBook.html
@@ -5,6 +5,7 @@
                 <li><a href=""> {{UserName}}'s Address Book</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a ng-if='isLoggedIn()' ng-href="#!/">Home</a></li>
                 <li ><a ng-if='isLoggedIn()' ng-href="#!/addressBook/new" >New Address</a></li>
                 <li ><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
                 <li ><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
