--- a/MyOrganizer/App/Views/editTask.html
+++ b/MyOrganizer/App/Views/editTask.html
@@ -5,6 +5,7 @@
                 <li><a href=""> {{UserName}}'s Task</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a ng-if='isLoggedIn()' ng-href="#!/">Home</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/task">Tasks List</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/task/new">New Task</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address Book</a></li>
