--- a/MyOrganizer/App/Views/home.html
+++ b/MyOrganizer/App/Views/home.html
@@ -5,13 +5,23 @@
                 <li><a href=""> {{UserName}}'s Address Book</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a ng-if='isLoggedIn()' href="" ng-click='GetListToDo()' >To Do List</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook" ng-click="getAddressBookList()">Address Book</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
-                <li><a ng-if='isLoggedIn()' ng-click='Logout()' href=" ">Logout </a></li>
+                <li><a ng-if='isLoggedIn()' href=" " ng-click='Logout()' >Logout </a></li>
             </ul>
         </div>
     </div>
 </div>
 
 <h2>hello {{UserName}} this is the Home page</h2>
+
+<div ng-repeat="item in ListToDo" class="ToDoList" ng-show="ToDoList" >
+    <div class="panel panel-default panel-body ">
+        <div class="col-xs-8">
+             <div class="col-xs-4">{{item.TaskName}} &nbsp; {{item.TaskDate}}</div>
+             <div class="col-xs-2"> {{item.Description}} </div>
+        </div>
+     </div>
+</div>
