--- a/MyOrganizer/App/Views/singleTask.html
+++ b/MyOrganizer/App/Views/singleTask.html
@@ -5,6 +5,7 @@
                 <li><a href=""> {{UserName}}'s Tasks</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a ng-if='isLoggedIn()' ng-href="#!/">Home</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/task/new">Add Task</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/task">Task List</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address List</a></li>
