list of meeting

--- a/MyOrganizer/App/Views/task.html
+++ b/MyOrganizer/App/Views/task.html
@@ -16,8 +16,8 @@
 </div>
 
 
-<div class="AddressList" >
-    <h1>Address List</h1>
+<div class="MeetingList" >
+    <h1>Task List</h1>
     <div class="searchText ">
         <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
     </div>
@@ -29,11 +29,6 @@
                      <div class="col-xs-2"> {{task.Description}} </div>
                  </a>
             </div>
-
-            <!--<div class=" col-xs-2">
-                <label for="taskDone">Done</label>
-                <input type="checkbox" Id="taskDone " class="checkbox" ng-click="taskDone(task)">
-            </div>-->
        </div>
     </div>
 </div>
