--- a/MyOrganizer/App/Views/meeting.html
+++ b/MyOrganizer/App/Views/meeting.html
@@ -6,7 +6,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a ng-if='isLoggedIn()' ng-href="#!/">Home</a></li>
-                <!--<li><a ng-if='isLoggedIn()' ng-href="#!/meeting/new">New Meeting</a></li>-->
+                <li><a ng-if='isLoggedIn()' ng-href="#!/meeting/new">New Meeting</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address Book</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/Task">Tasks</a></li>
                 <li><a ng-if='isLoggedIn()' ng-click='Logout()' href=" ">Logout </a></li>
