delete meeting done

--- a/MyOrganizer/App/Views/singleTask.html
+++ b/MyOrganizer/App/Views/singleTask.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<h1>single address page</h1>
+<h1>single Task page</h1>
 <div class="panel panel-default panel-body">
     <!--<div class="panel-body">-->
     <div class="col-xs-12">
