--- a/MyOrganizer/App/Views/singleMeeting.html
+++ b/MyOrganizer/App/Views/singleMeeting.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<h1>single address page</h1>
+<h1>single Meeting page</h1>
 <div class="panel panel-default panel-body">
     <div class="col-xs-12">
         <div class="col-xs-3"> {{singleMeeting.MeetingName}} &nbsp; {{singleMeeting.MeetingDate}}</div>
@@ -25,7 +25,7 @@
     </div>
     <div class="col-xs-4 ">
         <!--<a ng-href="#!/addressbooks/edit/{{item.id}}">-->
-        <button class="btn btn-danger fa fa-pencil-square-o" ng-click="editSingleMeeting(singleTask.Id)"></button>
+        <button class="btn btn-danger fa fa-pencil-square-o" ng-click="editSingleMeeting(singleMeeting.Id)"></button>
         <!--</a>-->
     </div>
 
