--- a/MyOrganizer/App/Views/login.html
+++ b/MyOrganizer/App/Views/login.html
@@ -15,11 +15,11 @@
         </div>
         <div class="row">
             <div class="col-xs-12 buttons">
-                <button class="col-xs-12 btn btn-warning" ng-click="loginUser()" ng-class="{'is-loading':inProgress}">Login</button>
+                <button class="col-xs-12 btn btn-warning" ng-click="loginUser()">Login</button>
             </div>
         </div>
         <div class="container">
-            <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
+            <div ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
                 {{alert.msg}}
             </div>
         </div>
@@ -59,10 +59,110 @@
         </div>
 
         <div class="container">
-            <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
+            <div ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
                 {{alert.msg}}
             </div>
         </div>
         <div class="col-xs-12 center registerText"><a href=" " ng-click="authenticate = !authenticate">Already have an account? Login here</a></div>
+    </div>
+</div>
+<!--============================================================================================-->
+<div class="container auth-container">
+    <div style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 authenticate" ng-hide="authenticate">
+        <div class="panel panel-info">
+
+            <div class="panel-heading">
+                <div class="panel-title">Sign In</div>
+            </div>
+
+            <div style="padding-top:30px" class="panel-body">
+                <form class="form-horizontal" role="form">
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="login-username" type="text" class="form-control" ng-model="userLogin.username"  placeholder="username" required autofocus>
+                    </div>
+
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="login-password" type="password" class="form-control" placeholder="password" ng-model="userLogin.password" required>
+                    </div>
+
+                    <div style="margin-top:10px" class="form-group">
+                        <div class="col-sm-12 controls">
+                            <a id="btn-login" href="#" class="btn btn-success" ng-click="loginUser()">Login  </a>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12 control">
+                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
+                                Dont have an account? 
+                                <a href="#" ng-click="authenticate = !authenticate"> Sign Up Here</a>      
+                            </div>
+                        </div>
+                    </div>
+                </form>
+
+                <div class="container">
+                    <div ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-10 col-xs-offset-1" >
+                        {{alert.msg}}
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 registerUser" ng-show="authenticate">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <div class="panel-title">Sign Up</div>
+                <div style="float:right; position: relative; top:-10px"><a id="signinlink" href="#" ng-click="authenticate = !authenticate">Sign In</a></div>
+            </div>
+
+            <div class="panel-body">
+                <form id="signupform" class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="userName" class="col-md-3 control-label">User Name</label>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control" placeholder="User Name" ng-model="auth.username" required autofocus>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email" class="col-md-3 control-label">Email</label>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control" placeholder="Email Address" ng-model="auth.email" required autofocus>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password" class="col-md-3 control-label">Password</label>
+                        <div class="col-md-9">
+                            <input type="password" class="form-control" placeholder="Password" ng-model="auth.password" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="confirmPassword" class="col-md-3 control-label">Confirm Password</label>
+                        <div class="col-md-9">
+                            <input type="password" class="form-control" placeholder="Confirm Password" ng-model="auth.confirm" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-3 col-md-9">
+                            <button id="btn-signup" type="button" class="btn btn-info" ng-click="registerUser()"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
+                        </div>
+                    </div>
+                </form>
+
+                <div class="container">
+                    <div ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-10 col-xs-offset-1">
+                        {{alert.msg}}
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
