stying address book

--- a/MyOrganizer/App/Views/login.html
+++ b/MyOrganizer/App/Views/login.html
@@ -1,4 +1,4 @@
-﻿<div class="auth-container">
+﻿<!--<div class="auth-container">
     <div class="container-fluid col-xs-12 authenticate" ng-hide="authenticate">
         <div class="row">
             <h2 class="black">Login</h2>
@@ -65,7 +65,7 @@
         </div>
         <div class="col-xs-12 center registerText"><a href=" " ng-click="authenticate = !authenticate">Already have an account? Login here</a></div>
     </div>
-</div>
+</div>-->
 <!--============================================================================================-->
 <div class="container auth-container">
     <div style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 authenticate" ng-hide="authenticate">
