--- a/MyOrganizer/App/Views/addressBook.html
+++ b/MyOrganizer/App/Views/addressBook.html
@@ -6,7 +6,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a ng-if='isLoggedIn()' ng-href="#!/">Home</a></li>
-                <li ><a ng-if='isLoggedIn()' ng-href="#!/addressBook/new" >New Address</a></li>
+                <li ><a ng-if='isLoggedIn()' ng-href="#!/addressBook/new" >Add new address</a></li>
                 <li ><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
                 <li ><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
                 <li ><a ng-if='isLoggedIn()' ng-click='Logout()' href=" ">Logout </a></li>
@@ -15,23 +15,31 @@
     </div>
 </div>
 
-
-<div class="AddressList" ng-hide="NewAddressBook">
-    <h1>Address List</h1>
-    <div class="searchText ">
-        <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
-    </div>
-    <div ng-repeat="address in addressBookList | filter: searchText">
-        <a href="">
-            <div class="panel panel-default panel-body">
-                    <div class="col-xs-8" ng-click="getsingleAddress(address.Id)">
-                        <div class="col-xs-4">{{address.FirstName}} &nbsp; {{address.LastName}}</div>
-                        <div class="col-xs-2"> {{address.Tel}} </div>
-                    </div>
+<div class="AbBackground">
+    <div class="AddressList" ng-hide="NewAddressBook">  
+        <div class="container">
+            <div class="searchText input-group col-md-8 col-md-offset-2 list">
+                <h1 class="AbTitle">Address Book</h1>
+                <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
             </div>
-        </a>       
+            <div class="panel panel-success col-md-8 col-md-offset-2 list" >
+                <div class="panel panel-success panel-heading title">{{UserName}}'s Address Book List</div>
+                    <div ng-repeat="address in addressBookList | filter: searchText">
+                        <a href="">
+                            <div class="panel panel-success panel-body" id="item" >
+                                <div class="col-xs-8" ng-click="getsingleAddress(address.Id)">
+                                    <div class="col-xs-6">{{address.FirstName}} &nbsp; {{address.LastName}}</div>
+                                    <div class="col-xs-2"> {{address.Tel}} </div>
+                                </div>
+                            </div>
+                        </a>         
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+
 
 
 
