--- a/MyOrganizer/App/Views/editAddress.html
+++ b/MyOrganizer/App/Views/editAddress.html
@@ -16,51 +16,84 @@
     </div>
 </div>
 
-<h3>Edit Address</h3>
-<div class="form-group">
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.FirstName" ng-model="singleAddress.FirstName" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.LastName" ng-model="singleAddress.LastName" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.Tel" ng-model="singleAddress.Tel" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.Email" ng-model="singleAddress.Email" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.Street" ng-model="singleAddress.Street" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.City" ng-model="singleAddress.City" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.State" ng-model="singleAddress.State" />
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.Zipcode" ng-model="singleAddress.Zipcode" />
-    </div>
-    <<!--div class="form-group">
-        <input type="text" class="form-control " placeholder="singleAddress.RelationShip" ng-model="singleAddress.RelationShip" />
-    </div>-->
+<h3 class=" col-sm-6 col-sm-offset-3">Edit {{singleAddress.FirstName}} Address</h3>
+<div class="container">
+    <div class=" col-sm-6 col-sm-offset-2" id="editAddressForm">
+        <div class="form-group">
 
-    <label>RelationShip</label>
-    <div class="form-group">
-        <select ng-model="singleAddress.RelationShip">
-            <option value="0">Family</option>
-            <option value="1">Friend</option>
-            <option value="2" selected>Others</option>
+            <div class="form-group row">
+                <span class="span col-sm-3">First Name</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.FirstName" ng-model="singleAddress.FirstName" />
+                </div>
+            </div>
 
-        </select>
+            <div class="form-group row">
+                <span class="span col-sm-3">Last Name</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.LastName" ng-model="singleAddress.LastName" />
+                </div>
+            </div>
 
-    </div>
-    <button class="btn btn-default " ng-click="editSingleAddress()">Change</button>
+            <div class="form-group row">
+                <span class="span col-sm-3">Telephone</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.Tel" ng-model="singleAddress.Tel" />
+                </div>
+            </div>
 
-    <div class="container">
-        <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
-            {{alert.msg}}
+            <div class="form-group row">
+                <span class="span col-sm-3">Email</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.Email" ng-model="singleAddress.Email" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <span class="span col-sm-3">Street</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.Street" ng-model="singleAddress.Street" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <span class="span col-sm-3">City</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.City" ng-model="singleAddress.City" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <span class="span col-sm-3">State</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.State" ng-model="singleAddress.State" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <span class="span col-sm-3">Zipcode</span>
+                <div class="form-group">
+                    <input type="text" class="form-control " placeholder="singleAddress.Zipcode" ng-model="singleAddress.Zipcode" />
+                </div>
+             </div>
+
+            <div class="form-group row">
+                <span class="span col-sm-3">RelationShip</span>
+                <div class="form-group">
+                    <select ng-model="singleAddress.RelationShip">
+                        <option value="0">Family</option>
+                        <option value="1">Friend</option>
+                        <option value="2">Others</option>
+                    </select>
+                </div>
+            </div>
+
+            <button class="btn btn-default " ng-click="editSingleAddress()">Change</button>
+            <div class="container">
+                <div ng-repeat="alert in alerts" ng-class="'alert-' + 'danger'" close="closeAlert($index)" class="alert col-xs-8 col-xs-offset-2">
+                      {{alert.msg}}
+                </div>
+             </div>
         </div>
     </div>
 </div>
