--- a/MyOrganizer/App/Views/singleAddress.html
+++ b/MyOrganizer/App/Views/singleAddress.html
@@ -16,32 +16,42 @@
     </div>
 </div>
 
-<h1>single address page</h1>
-<div class="panel panel-default panel-body">
-   <!--<div class="panel-body">-->
-        <div class="col-xs-12" >
-            <div class="col-xs-3"> {{singleAddress.FirstName}} &nbsp; {{singleAddress.LastName}}</div>
-            <div class="col-xs-3"> {{singleAddress.Tel}} </div>
-            <div class="col-xs-4"> {{singleAddress.Email}}</div>
-            <div class="col-xs-6"> {{singleAddress.Street}}  &nbsp; 
-                                   {{singleAddress.City}} &nbsp;
-                                   {{singleAddress.State}} 
-                                   {{singleAddress.Zipcode}}</div>
-            <div class="col-xs-1"> {{singleAddress.RelationShip}}</div>
+<h1 class="col-sm-offset-2">single address</h1>
+<div class="panel panel-body col-sm-8 col-sm-offset-2" id="singleAddress">
 
-            
+    <div class="row space">
+        <span class="span col-sm-2">Name:</span>
+        <p class="col-xs-8"> {{singleAddress.FirstName}} &nbsp; {{singleAddress.LastName}}</p>
+    </div>
 
-         <!--</div>-->
+    <div class="row space">
+         <span class="span col-sm-2">Telpone:</span>
+         <div class="col-xs-3"> {{singleAddress.Tel}} </div>
+    </div>
+
+    <div class="row space">
+         <span class="span col-sm-2">Email:</span>
+         <div class="col-xs-4"> {{singleAddress.Email}}</div>
+    </div>
+
+    <div class="row space">
+         <span class="span col-sm-2">Address:</span>
+         <div class="col-xs-6">{{singleAddress.Street}}  &nbsp;{{singleAddress.City}} &nbsp;.{{singleAddress.State}},{{singleAddress.Zipcode}}
+         </div>
      </div>
-    <div class="col-xs-4 ">
-        <!--<a ng-href="#!/addressbooks/edit/{{item.id}}">-->
-        <button class="btn btn-danger fa fa-pencil-square-o" ng-click="editSingleAddress(singleAddress.Id)"></button>
-        <!--</a>-->
+
+     <div class="row space">
+         <span class="span col-sm-2">RelationShip:</span>
+         <div class="col-xs-2"> {{singleAddress.RelationShip}}</div>
+     </div>
+
+     <div class="row space">
+        <div class="col-sm-4 col-sm-offset-2">
+            <button class=" btn btn-success glyphicon glyphicon-pencil" ng-click="editSingleAddress(singleAddress.Id)"></button>
+        </div>
+        <div class="col-xs-4 ">
+            <button class="btn btn-danger glyphicon glyphicon-trash" ng-click="deleteSingleAddress(singleAddress.Id)"></button>
+        </div>
     </div>
 
-    <div class="col-xs-4 ">
-        <!--<a ng-href="#!/addressBooks/list">-->
-        <button class="btn btn-danger fa fa-trash-o" ng-click="deleteSingleAddress(singleAddress.Id)"></button>
-        <!--</a>-->
-    </div>
 </div>
