--- a/MyOrganizer/Views/Shared/_Layout.cshtml
+++ b/MyOrganizer/Views/Shared/_Layout.cshtml
@@ -3,25 +3,26 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link href='https://fonts.googleapis.com/css?family=Vast Shadow' rel='stylesheet'>
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body ng-app="MyOrganizer">
-    @*<div class="navbar navbar-inverse navbar-fixed-top MainNavBar">
-        <div class="container">
+    <div class="navbar navbar-inverse navbar-fixed-top mainnavbar">
+        @*<div class="container">*@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"> 
-                    <li > My Organizer</li>
-                    <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook">Address Book</a></li>
-                    <li><a ng-if='isLoggedIn()' ng-href="#!/task">HI</a></li>
-                    <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
-                    <li><a ng-if='isLoggedIn()' ng-click='Logout()'  href= " ">Logout </a></li>
+                    <li id="appName"> <a> My Organizer</a></li>
+                    <li><a ng-if='isloggedin()' ng-href="#!/addressbook">address book</a></li>
+                    <li><a ng-if='isloggedin()' ng-href="#!/task">hi</a></li>
+                    <li><a ng-if='isloggedin()' ng-href="#!/meeting">meeting</a></li>
+                    <li><a ng-if='isloggedin()' ng-click='logout()'  href= " ">logout </a></li>
                 </ul>
             </div>
-        </div>
-    </div>*@
-    <div class="container body-content">
+        @*</div>*@
+    </div>
+    <div class="container body-content" id="bodyContainer">
         @RenderBody()
         <hr />
         <footer>
