fix the routing issue

--- a/MyOrganizer/App/Views/editAddress.html
+++ b/MyOrganizer/App/Views/editAddress.html
@@ -81,9 +81,9 @@
                 <span class="span col-sm-3">RelationShip</span>
                 <div class="form-group">
                     <select ng-model="singleAddress.RelationShip">
-                        <option value="0">Family</option>
-                        <option value="1">Friend</option>
-                        <option value="2">Others</option>
+                        <option>Family</option>
+                        <option>Friend</option>
+                        <option>Others</option>
                     </select>
                 </div>
             </div>
