--- a/MyOrganizer/App/Views/addressBook.html
+++ b/MyOrganizer/App/Views/addressBook.html
@@ -25,9 +25,9 @@
             <div class="panel panel-success col-md-8 col-md-offset-2 list" >
                 <div class="panel panel-success panel-heading title">{{UserName}}'s Address Book List</div>
                     <div ng-repeat="address in addressBookList | filter: searchText">
-                        <a href="">
+                        <a href="#!/addressBook/{{address.Id}}">
                             <div class="panel panel-success panel-body" id="item" >
-                                <div class="col-xs-8" ng-click="getsingleAddress(address.Id)">
+                                <div class="col-xs-8">
                                     <div class="col-xs-6">{{address.FirstName}} &nbsp; {{address.LastName}}</div>
                                     <div class="col-xs-2"> {{address.Tel}} </div>
                                 </div>
