--- a/MyOrganizer/App/Views/newAddress.html
+++ b/MyOrganizer/App/Views/newAddress.html
@@ -56,9 +56,9 @@
             <div class="form-group row">
                 <span class="span col-sm-3">RelationShip</span>
                 <select ng-model="newAddress.RelationShip" class="col-md-6">
-                    <option value="0">Family</option>
-                    <option value="1">Friend</option>
-                    <option value="2" selected>Others</option>
+                    <option>Family</option>
+                    <option>Friend</option>
+                    <option>Others</option>
                 </select>
             </div>
             <div class="col-sm-offset-3">
